This this the changelog file for the Pothos Blocks toolkit.

Release 0.2.1 (pending)
==========================

- Created sporadic dropper for reliability testing
- Fix feeder element generator to support unsigned
- Feeder+collector blocks support packets in test plan
- Support packet payloads for symbol conversion blocks
- Added multiple option to Feeder source test plan
- Added symbols to bytes conversion block
- Added preamble framer block to frame a symbol stream
- Preamble correlator supports arbitrary symbol widths
- Style and documentation changes for digital blocks

Release 0.2.0 (2015-06-17)
==========================

New packet blocks:

- Added link layer control block
- Added media access control block
- Added label deframer block

New digital blocks:

- Added scrambler block
- Added descrambler block
- Added symbol mapper block
- Added bits to symbols block
- Added bytes to symbols block
- Added symbols to bits block
- Added symbol slicer block
- Added preamble correlator block
- Added differential encoder block
- Added differential decoder block

New utility blocks:

- Created transform signal/slots utility block
- Created vector source block for testing
- Created infinite source block for benchmarks

File

- Added data type specification to file source

Misc

- Added sample rate param to waveform source
- Pacer block produces rxRate label on change
- Added synchronous alignment option to snooper
- Added unit test for JSON Topology feature

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos Blocks toolkit.